# Intent-Classifier-Service

./: Dockerfile  README.md  docker-compose.yml  hatch.toml  intent_classifier.py  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: endpoints.py  schemas.py
app/core/: config.py
app/services/: base_classifier.py  bert_classifier.py  intent_classifier.py
app/utils/: logger.py
models/bert/: config.json  labels.json  run_config.json
models/fasttext/: config.json  labels.json  vocab.json
scripts/: train_all.sh
tests/: test_intent.py  test_ready.py
trains/: train_baseline.py  train_bert.py
